// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckIn /> renders check in state 1`] = `
<Styled(View)>
  <Styled(LinearGradient)
    colors={
      Array [
        "#f8a5c2",
        "#f7d794",
      ]
    }
  />
  <Styled(Text)>
    How was your day?
  </Styled(Text)>
  <Styled(View)>
    <Styled(TouchableOpacity)
      onPress={[Function]}
      style={
        Object {
          "marginRight": 8,
        }
      }
    >
      <Styled(Text)>
        <Icon
          allowFontScaling={false}
          name="emoji-happy"
          size={98}
        />
      </Styled(Text)>
    </Styled(TouchableOpacity)>
    <Styled(TouchableOpacity)
      onPress={[Function]}
    >
      <Styled(Text)>
        <Icon
          allowFontScaling={false}
          name="emoji-sad"
          size={98}
        />
      </Styled(Text)>
    </Styled(TouchableOpacity)>
  </Styled(View)>
</Styled(View)>
`;

exports[`<CheckIn /> renders done state 1`] = `
<Styled(View)>
  <Styled(LinearGradient)
    colors={
      Array [
        "#f8a5c2",
        "#f7d794",
      ]
    }
  />
  <Styled(Text)>
    Another Day Recorded!
  </Styled(Text)>
  <Done
    style={
      Object {
        "height": 200,
        "width": 200,
      }
    }
  />
</Styled(View)>
`;

exports[`<CheckIn /> renders loading state 1`] = `
<Styled(View)>
  <Loader
    style={
      Object {
        "height": 100,
        "width": 100,
      }
    }
  />
</Styled(View)>
`;
